@@ -1,5 +1,9 @@
 CHANGE LOG / RELEASE NOTES: (Newest to Oldest)
 
+A21.2.001.0044 :
+* Added 2 terrain blocks.
+* Aligned cbpMatressThin to be flush with the floor.
+
 A21.2.001.0043 :
 * Added wine bottle offsets.
 * Added new Game Effects.
